--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke Wars</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+
+    <div class="columns">
+    <div class="column">
+      <input id="poke-input" class="input" type="text" placeholder="Type in your Pokemon" />
+      <div class="control">
+        <button id="pick-poke" class="button is-primary">Submit</button>
+      </div>
+    </div>
+
+    <div class="column"></div>
+
+    <div class="column">
+      <input id="star-wars-input" class="input" type="text" placeholder="Type in your Star Wars" />
+      <div class="control">
+        <button id="pick-star-wars" class="button is-primary">Submit</button>
+      </div>
+    </div>
+</div>
+
     <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
