front end proof of concept

--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <div id="pokemon">
+        <!-- <input
+          id="poke-input"
+          class="input"
+          type="text"
+          placeholder="Type in your Pokemon"
+        />
+          <button id="pick-poke" class="button is-primary">Submit</button> -->
+    <div id="poke-chosen"></div>
+        </div>
 
-    <div class="columns">
-    <div class="column">
-      <input id="poke-input" class="input" type="text" placeholder="Type in your Pokemon" />
-      <div class="control">
-        <button id="pick-poke" class="button is-primary">Submit</button>
-      </div>
-    </div>
-
-    <div class="column"></div>
-
-    <div class="column">
-      <input id="star-wars-input" class="input" type="text" placeholder="Type in your Star Wars" />
-      <div class="control">
-        <button id="pick-star-wars" class="button is-primary">Submit</button>
-      </div>
-    </div>
-</div>
+      <div id="star-wars">
+        <!-- <input
+          id="star-wars-input"
+          class="input"
+          type="text"
+          placeholder="Type in your Star Wars"
+        />
+          <button id="pick-star-wars" class="button is-primary">Submit</button> -->
+      <div id="star-chosen"></div>
+        </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
